--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 	</section>
 	<footer class="footer">
 		<div class="bottom-logo">
-			<img src="images/logo.png" alt="img"></img>
+			<img src="images/logo.png" alt="img">
 		</div>
 		<h3>Gratia Restaurant</h3>
 		<p>Copyright 2016. All rights reserved by symu</p>
